--- a/Commands/Commands.csproj
+++ b/Commands/Commands.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Exit.cs" />
     <Compile Include="ICommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StopServerException.cs" />
     <Compile Include="Terminate.cs" />
     <Compile Include="UploadFile.cs" />
   </ItemGroup>
