Some fix and simple webcam command

--- a/ReverseShellServer/ReverseShellServer.csproj
+++ b/ReverseShellServer/ReverseShellServer.csproj
@@ -106,6 +106,10 @@
       <Project>{7e0a8c84-ca50-4a9a-9b35-6da4e5640cda}</Project>
       <Name>Commands</Name>
     </ProjectReference>
+    <ProjectReference Include="..\ConsoleColorTools\Shared.csproj">
+      <Project>{982DC5B6-1123-428A-83DD-D212490C859F}</Project>
+      <Name>Shared</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Crypter\Crypter.csproj">
       <Project>{aaa22a7d-9c62-41f5-a275-5c8c38f723c6}</Project>
       <Name>Crypter</Name>
