--- a/ConsoleColorTools/Shared.csproj
+++ b/ConsoleColorTools/Shared.csproj
@@ -41,7 +41,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ColorTools.cs" />
+    <Compile Include="ExitException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StopServerException.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
