Push csproj containing renames
Another error of push -_- ty visual studio

--- a/Commands/Commands.csproj
+++ b/Commands/Commands.csproj
@@ -52,7 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommandsManager.cs" />
-    <Compile Include="DownloadFile.cs" />
+    <Compile Include="Download.cs" />
     <Compile Include="DownloadUrl.cs" />
     <Compile Include="Exit.cs" />
     <Compile Include="GetOpenPrograms.cs" />
@@ -63,7 +63,7 @@
     <Compile Include="Screenshot.cs" />
     <Compile Include="SysInfo.cs" />
     <Compile Include="Terminate.cs" />
-    <Compile Include="UploadFile.cs" />
+    <Compile Include="Upload.cs" />
     <Compile Include="Wallpaper.cs" />
     <Compile Include="Webcam.cs" />
   </ItemGroup>
