NetworkManager project splited into classes
Both the ServerNetworkManager and the ClientNetworkManager were accessible by both the server and the client, which was a code structure issue.

--- a/ConsoleColorTools/Shared.csproj
+++ b/ConsoleColorTools/Shared.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="ColorTools.cs" />
     <Compile Include="ExitException.cs" />
+    <Compile Include="NetworkManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StopServerException.cs" />
   </ItemGroup>
