--- a/Commands/Commands.csproj
+++ b/Commands/Commands.csproj
@@ -57,6 +57,7 @@
     <Compile Include="CommandsManager.cs" />
     <Compile Include="Download.cs" />
     <Compile Include="DownloadUrl.cs" />
+    <Compile Include="Execute.cs" />
     <Compile Include="Exit.cs" />
     <Compile Include="GetOpenPrograms.cs" />
     <Compile Include="ICommand.cs" />
