--- a/ClientCommands/ClientCommands.csproj
+++ b/ClientCommands/ClientCommands.csproj
@@ -4,16 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9FDAE122-CD1E-467D-A6FA-A98C26E76348}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>ReverseShellClient</RootNamespace>
-    <AssemblyName>ReverseShellClient</AssemblyName>
+    <ProjectGuid>{344B0F42-2B3B-4D8A-8188-364F76A3D9E0}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>ClientCommands</RootNamespace>
+    <AssemblyName>ClientCommands</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -42,21 +40,33 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ClientManager.cs" />
-    <Compile Include="ClientNetworkManager.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="Core\ClientCommandsManager.cs" />
+    <Compile Include="Cmd.cs" />
+    <Compile Include="Core\CD.cs" />
+    <Compile Include="Core\ICommand.cs" />
+    <Compile Include="Core\LCD.cs" />
+    <Compile Include="Core\LLS.cs" />
+    <Compile Include="Core\LPWD.cs" />
+    <Compile Include="Core\LS.cs" />
+    <Compile Include="Core\PWD.cs" />
+    <Compile Include="Download.cs" />
+    <Compile Include="DownloadUrl.cs" />
+    <Compile Include="Execute.cs" />
+    <Compile Include="Exit.cs" />
+    <Compile Include="GetOpenPrograms.cs" />
+    <Compile Include="KeyLogger.cs" />
+    <Compile Include="PlaySound.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Screenshot.cs" />
+    <Compile Include="SysInfo.cs" />
+    <Compile Include="Terminate.cs" />
+    <Compile Include="Upload.cs" />
+    <Compile Include="Wallpaper.cs" />
+    <Compile Include="Webcam.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\ClientCommands\ClientCommands.csproj">
-      <Project>{344B0F42-2B3B-4D8A-8188-364F76A3D9E0}</Project>
-      <Name>ClientCommands</Name>
-    </ProjectReference>
     <ProjectReference Include="..\ConsoleColorTools\Shared.csproj">
-      <Project>{982dc5b6-1123-428a-83dd-d212490c859f}</Project>
+      <Project>{982DC5B6-1123-428A-83DD-D212490C859F}</Project>
       <Name>Shared</Name>
     </ProjectReference>
   </ItemGroup>
