--- a/ClientCommands/ClientCommands.csproj
+++ b/ClientCommands/ClientCommands.csproj
@@ -65,8 +65,8 @@
     <Compile Include="Webcam.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ConsoleColorTools\Shared.csproj">
-      <Project>{982DC5B6-1123-428A-83DD-D212490C859F}</Project>
+    <ProjectReference Include="..\Shared\Shared.csproj">
+      <Project>{982dc5b6-1123-428a-83dd-d212490c859f}</Project>
       <Name>Shared</Name>
     </ProjectReference>
   </ItemGroup>
