Bunch of changes and BOTNET !!!
A lot of changes, but mainly the botnet implementation

--- a/AdvancedConsole/AdvancedConsole.csproj
+++ b/AdvancedConsole/AdvancedConsole.csproj
@@ -45,7 +45,7 @@
     <Compile Include="ColorTools.cs" />
     <Compile Include="CommandsHistory.cs" />
     <Compile Include="CustomConsole.cs" />
-    <Compile Include="DisplayTools.cs" />
+    <Compile Include="ConsoleTools.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
