--- a/ClientBotnet/ClientBotnet.csproj
+++ b/ClientBotnet/ClientBotnet.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{344B0F42-2B3B-4D8A-8188-364F76A3D9E0}</ProjectGuid>
+    <ProjectGuid>{F860EFC0-6573-4894-80B6-E53BC24FAD48}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ClientCommands</RootNamespace>
-    <AssemblyName>ClientCommands</AssemblyName>
+    <RootNamespace>ClientBotnet</RootNamespace>
+    <AssemblyName>ClientBotnet</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,40 +43,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Core\ClientCommandsManager.cs" />
-    <Compile Include="Cmd.cs" />
-    <Compile Include="Core\CD.cs" />
-    <Compile Include="Core\IClientCommand.cs" />
-    <Compile Include="Core\LCD.cs" />
-    <Compile Include="Core\LLS.cs" />
-    <Compile Include="Core\LPWD.cs" />
-    <Compile Include="Core\LS.cs" />
-    <Compile Include="Core\PWD.cs" />
-    <Compile Include="Download.cs" />
-    <Compile Include="DownloadUrl.cs" />
-    <Compile Include="Execute.cs" />
-    <Compile Include="Exit.cs" />
-    <Compile Include="ListProcesses.cs" />
-    <Compile Include="KeyLogger.cs" />
-    <Compile Include="PlaySound.cs" />
+    <Compile Include="JSON\BaseJson.cs" />
+    <Compile Include="BotnetManager.cs" />
+    <Compile Include="JSON\ConnectClientJson.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Screenshot.cs" />
-    <Compile Include="StopConnection.cs" />
-    <Compile Include="SysInfo.cs" />
-    <Compile Include="Terminate.cs" />
-    <Compile Include="Upload.cs" />
-    <Compile Include="Wallpaper.cs" />
-    <Compile Include="Webcam.cs" />
+    <Compile Include="JSON\CheckServerJson.cs" />
+    <Compile Include="JSON\ViewHostsJson.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AdvancedConsole\AdvancedConsole.csproj">
-      <Project>{692a7c90-b8ff-44b3-94b4-6f6b4b5370b7}</Project>
+      <Project>{692A7C90-B8FF-44B3-94B4-6F6B4B5370B7}</Project>
       <Name>AdvancedConsole</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Shared\Shared.csproj">
-      <Project>{982dc5b6-1123-428a-83dd-d212490c859f}</Project>
-      <Name>Shared</Name>
-    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
