--- a/ServerCommands/ServerCommands.csproj
+++ b/ServerCommands/ServerCommands.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Core\ServerCommandsManager.cs" />
     <Compile Include="Screenshot.cs" />
+    <Compile Include="StopConnection.cs" />
     <Compile Include="SysInfo.cs" />
     <Compile Include="Terminate.cs" />
     <Compile Include="Upload.cs" />
