--- a/Shared/Shared.csproj
+++ b/Shared/Shared.csproj
@@ -40,11 +40,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CommandsManager.cs" />
+    <Compile Include="GlobalCommandsManager.cs" />
     <Compile Include="ExitException.cs" />
     <Compile Include="ICommand.cs" />
     <Compile Include="NetworkException.cs" />
-    <Compile Include="NetworkManager.cs" />
+    <Compile Include="GlobalNetworkManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StopServerException.cs" />
   </ItemGroup>
