--- a/Server/packages.config
+++ b/Server/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AForge" version="2.2.5" targetFramework="net461" />
-  <package id="AForge.Video" version="2.2.5" targetFramework="net461" />
-  <package id="AForge.Video.DirectShow" version="2.2.5" targetFramework="net461" />
+  <package id="Accord" version="3.8.0" targetFramework="net461" />
+  <package id="Accord.Video" version="3.8.0" targetFramework="net461" />
+  <package id="Accord.Video.DirectShow" version="3.8.0" targetFramework="net461" />
+  <package id="Accord.Video.FFMPEG" version="3.8.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
   <package id="System.Data.SQLite.Core" version="1.0.108.0" targetFramework="net461" />
 </packages>
