Syntax helper removed, embed in validArguments

--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -81,7 +81,7 @@
     <Compile Include="Commands\Upload.cs" />
     <Compile Include="Commands\Wallpaper.cs" />
     <Compile Include="Commands\Webcam.cs" />
-    <Compile Include="Commands\WifiInfo.cs" />
+    <Compile Include="Commands\NetInfo.cs" />
     <Compile Include="Core\ClientManager.cs" />
     <Compile Include="Core\ClientNetworkManager.cs" />
     <Compile Include="Core\Program.cs" />
