--- a/Master/Master.csproj
+++ b/Master/Master.csproj
@@ -63,7 +63,6 @@
     <Compile Include="Botnet\JSON\ConnectClientJson.cs" />
     <Compile Include="Botnet\JSON\ViewHostsJson.cs" />
     <Compile Include="Commands\BrowserTornado\BrowserTornadoCommand.cs" />
-    <Compile Include="Commands\BrowserTornado\BrowserTornadoManager.cs" />
     <Compile Include="Commands\BrowserTornado\Chrome.cs" />
     <Compile Include="Commands\BrowserTornado\CookieObject.cs" />
     <Compile Include="Commands\BrowserTornado\Firefox.cs" />
@@ -111,4 +110,11 @@
     <Content Include="Backnet-icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\packages\System.Data.SQLite.Core.1.0.108.0\build\net46\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.108.0\build\net46\System.Data.SQLite.Core.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\System.Data.SQLite.Core.1.0.108.0\build\net46\System.Data.SQLite.Core.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\System.Data.SQLite.Core.1.0.108.0\build\net46\System.Data.SQLite.Core.targets'))" />
+  </Target>
 </Project>
