--- a/Slave/packages.config
+++ b/Slave/packages.config
@@ -4,5 +4,7 @@
   <package id="Accord.Video" version="3.8.0" targetFramework="net461" />
   <package id="Accord.Video.DirectShow" version="3.8.0" targetFramework="net461" />
   <package id="Accord.Video.FFMPEG" version="3.8.0" targetFramework="net461" />
+  <package id="Costura.Fody" version="2.0.0" targetFramework="net461" />
+  <package id="Fody" version="3.0.0" targetFramework="net461" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
 </packages>
