--- a/Slave/Slave.csproj
+++ b/Slave/Slave.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Commands\Execute.cs" />
     <Compile Include="Commands\KeyLogger\KeyLoggerCommand.cs" />
     <Compile Include="Commands\ListProcesses.cs" />
+    <Compile Include="Commands\LoadCommands.cs" />
     <Compile Include="Commands\Persistance.cs" />
     <Compile Include="Commands\PlaySound.cs" />
     <Compile Include="Commands\Screenshot.cs" />
